Update: build target change to JDK8